--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -27,7 +27,9 @@ security:
                 path: app_logout
                 # where to redirect after logout
                 # target: app_any_route
-
+            
+            access_denied_handler: App\Security\AccessDeniedHandler
+            
             # Activate different ways to authenticate:
             # https://symfony.com/doc/current/security.html#the-firewall
 
@@ -36,7 +38,7 @@ security:
 
     # Note: Only the *first* matching rule is applied
     access_control:
-        #- { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/admin, roles: ROLE_ADMIN }
         - { path: ^/profile, roles: ROLE_USER }
 
 
